# Metronos

./: README.md  pyproject.toml  requirements.txt
src/metronos/: __init__.py  core.py
tests/: test_core.py
