[build-system]
# Using hatchling is recommended for modern projects, 
# but setuptools or flit work well too.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metronos"
version = "0.1.0"
description = "A physical quantities and units package in Python."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["units", "quantities", "measurement", "physics", "metronos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

# Add your core dependencies here (e.g., numpy if you use it)
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/metronos"
Documentation = "https://metronos.readthedocs.io"
Repository = "https://github.com/yourusername/metronos.git"
Issues = "https://github.com/yourusername/metronos/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/metronos"]

[tool.pytest.ini_options]
testpaths = ["tests"]