[build-system]
# Using hatchling is recommended for modern projects, 
# but setuptools or flit work well too.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metronos"
version = "0.1.1"
description = "A physical quantities and units package in Python."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Christopher Burnside", email = "christopher.g.burnside@gmail.com"},
]
keywords = ["units", "quantities", "measurement", "physics", "metronos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

# Add your core dependencies here (e.g., numpy if you use it)
dependencies = []

[project.urls]
Homepage = "https://github.com/cgburnsi/Metronos"
Documentation = "https://metronos.readthedocs.io"
Repository = "https://github.com/cgburnsi/metronos.git"
Issues = "https://github.com/cgburnsi/metronos/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/metronos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]